--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Codecov
       uses: codecov/codecov-action@v2.1.0
       with:
-        file: ""
+        file: "D:\Repositories\HW_.NET_LAB\Homeworks\veryimportantfile.xml"
